<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <Button
      android:id="@+id/back_button"
      android:layout_width="128dp"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="6dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/round_bg"
      android:text="@string/back"
      android:textColor="@color/textButtonColor"
      android:textSize="20dp"
      app:layout_constraintStart_toStartOf="parent"
      tools:ignore="MissingConstraints" />


  <EditText
      android:id="@+id/song_name_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/back_button"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="50dp"
      android:background="@drawable/custom_round_border"
      android:drawableStart="@drawable/custom_write_ic"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/song_name"
      android:inputType="textPersonName"
      android:padding="16dp" />

  <EditText
      android:id="@+id/author_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/song_name_input"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/custom_round_border"
      android:drawableStart="@drawable/custom_write_ic"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/author"
      android:inputType="textPersonName"
      android:padding="16dp" />

  <EditText
      android:id="@+id/genre_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/author_input"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/custom_round_border"
      android:drawableStart="@drawable/custom_write_ic"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/genre"
      android:inputType="textPersonName"
      android:padding="16dp" />

  <EditText
      android:id="@+id/track_name_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/genre_input"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/custom_round_border"
      android:drawableStart="@drawable/custom_write_ic"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/track_name"
      android:inputType="textPersonName"
      android:padding="16dp" />

  <TextView
      android:id="@+id/track_path"
      android:layout_width="168dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/track_name_input"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="60dp"
      android:ems="10"
      android:hint="@string/track_path"
      android:textAppearance="@style/text_20_black"
      android:padding="16dp"
      android:textSize="20sp" />


  <Button
      android:id="@+id/add_track_button"
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/track_path"
      android:layout_marginHorizontal="100dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="-56dp"
      android:layout_marginBottom="6dp"
      android:layout_toEndOf="@+id/track_path"
      android:background="@drawable/gradient_border"
      android:text="@string/add_track"
      android:textColor="@color/textButtonColor"
      android:textSize="20dp"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/save_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginHorizontal="100dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/round_bg"
      android:text="@string/save"
      android:textColor="@color/textButtonColor"
      android:textSize="20dp"
      tools:ignore="MissingConstraints" />

</RelativeLayout>