<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:text="@string/account_edit" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="@string/account_sing_out" />
    </LinearLayout>

    <TextView
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/account_name"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,UnknownId" />

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/account_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/account_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_nickname"
            android:textSize="25sp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,MissingConstraints,Suspicious0dp" />

        <TextView
            android:id="@+id/account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_email"
            android:textSize="25sp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,MissingConstraints,Suspicious0dp" />

        <TextView
            android:id="@+id/account_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_phone"
            android:textSize="25sp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,MissingConstraints,Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/information"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="50dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/check_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_check_music" />

        <Button
            android:id="@+id/add_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_admin_add_music" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>