<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="30sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/second_name_input" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/second_name_input" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_bg"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/recover_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_bg"
            android:text="@string/recover_password" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_bg"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>